--- a/main.html
+++ b/main.html
@@ -7,7 +7,6 @@
 	</head>
 
 	<body>
-		
 		<div id="board">
 			<div id="leftlanes">
 				<div id="lane1"></div>
@@ -17,6 +16,9 @@
 				<div id="lane3"></div>
 				<div id="lane4"></div>
 			</div>
+		</div>
+		<div id="scorediv">
+			<h2 id="scoreh2">0</h2>
 		</div>
 		
 		
