reduced gap between two rocks and added instruction

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-
+		
 		<div id="board">
 			<div id="leftlanes">
 				<div id="lane1"></div>
@@ -20,6 +20,7 @@
 		</div>
 		<div id="scorediv">
 			<h2 id="scoreh2">0</h2>
+			<h3 id="instructions">use F and J to move cars</h3>
 		</div>
 		
 		
