removed floats and all in css and used to inline flex as display

--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
 	</head>
 
 	<body>
-		
-		<div id="board">
-			<div id="leftlanes">
-				<div id="lane1"></div>
-				<div id="lane2"></div>
+		<div id="screen">
+			<div id="board">
+				<div id="leftlanes">
+					<div id="lane1"></div>
+					<div id="lane2"></div>
+				</div>
+				<div id="rightlanes">
+					<div id="lane3"></div>
+					<div id="lane4"></div>
+				</div>
 			</div>
-			<div id="rightlanes">
-				<div id="lane3"></div>
-				<div id="lane4"></div>
+			<div id="scorediv">
+				<h2 id="scoreh2">0</h2>
+				<!-- <h3 id="instructions">use F and J to move cars</h3> -->
 			</div>
-		</div>
-		<div id="scorediv">
-			<h2 id="scoreh2">0</h2>
-			<h3 id="instructions">use F and J to move cars</h3>
 		</div>
 		
 		
