change bg color

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 				</div>
 			</div>
 			<div id="scorediv">
+
 				<h2 id="scoreh2">0</h2>
 				<!-- <h3 id="instructions">use F and J to move cars</h3> -->
 			</div>
+			<div id="playagain">
+                  	<span><h1 onclick="window.location.reload();">PLAY AGAIN</h1></span>
+		    </div>
 			
 		</div>
 		
