added replay button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<!-- <h3 id="instructions">use F and J to move cars</h3> -->
 			</div>
 			<div id="playagain">
-                  	<span><h1 onclick="window.location.reload();">PLAY AGAIN</h1></span>
+                  	<span><img src="./images/play.png" onclick="window.location.reload();" width="200" height="200"></img></span>
 		    </div>
 			
 		</div>
