special effects has been added

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 				<!-- <h3 id="instructions">use F and J to move cars</h3> -->
 			</div>
 			<div id="playagain">
-                  	<span><img src="./images/play.png" onclick="window.location.reload();" width="200" height="200"></img></span>
-		    </div>
+<!--                   	<span><img src="./images/play.png" onclick="window.location.reload();" width="200" height="200"></img></span>
+ -->		    
+ 						<span><img src="./images/play.png" onclick="endEffects();" width="200" height="200"></img></span>
+			</div>
 			
 		</div>
 		
