added instructions button and effects and added zindex so that instructions button can be clickable any time

--- a/index.html
+++ b/index.html
@@ -23,10 +23,17 @@
 				<h2 id="scoreh2">0</h2>
 				<!-- <h3 id="instructions">use F and J to move cars</h3> -->
 			</div>
+			<div id="instructionsButton">
+				<button id="instructionsButton" onclick="instructions();">Instructions</button>	
+			</div>
+			<div id="instructions">
+				<h3>Use F and J for car movement...Rest of the things, you figure out !!!
+				</h3>
+			</div>
 			<div id="playagain">
 <!--                   	<span><img src="./images/play.png" onclick="window.location.reload();" width="200" height="200"></img></span>
  -->		    
- 						<span><img src="./images/play.png" onclick="endEffects();" width="200" height="200"></img></span>
+ 						<span id="reloadButton"><img src="./images/play.png" onclick="endEffects();" width="200" height="200"></img></span>
 			</div>
 			
 		</div>
