added mobile check so that the game is not available in mobile

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
  -->		    
  						<span id="reloadButton"><img src="./images/play.png" onclick="endEffects();" width="200" height="200"></img></span>
 			</div>
+
+			<h1 id='mobileWarning'>The Game does not work in Mobile devices.Please open in desktop/laptop and enjoy the game</h1>
 			
 		</div>
 		
