--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 			<div id="instructions">
 				<h3>Use F and J for car movement...Rest of the things, you figure out !!!
 				</h3>
+				
+				<h3>Difficulty starts after you score 50 !! Full Screen is recommended..Enjoy the Game...
+				</h3>
 			</div>
 			<div id="playagain">
 <!--                   	<span><img src="./images/play.png" onclick="window.location.reload();" width="200" height="200"></img></span>
